--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <h1>
-  <a href="practice.HTML" title="This is Main">Web</a>
+  <a href="index.html" title="This is Main">Web</a>
 </h1>
 <ol>
-<li><a href="html.HTML" title="What is HTMl"> HTML</a></li>
-<li><a href="css.HTML" title="this is css"> CSS</a></li>
+<li><a href="html.html" title="What is HTMl"> HTML</a></li>
+<li><a href="css.html" title="this is css"> CSS</a></li>
 <li> Java Script</li>
 </ol>
 
