--- a/css.html
+++ b/css.html
@@ -4,11 +4,11 @@
 <head>
 <title>css</title>
   <h1>
-    <a href="practice.HTML" title="This is Main"><li>Web</li></a>
+    <a href="index.html" title="This is Main"><li>Web</li></a>
   </h1>
   <ol>
-    <li><a href="html.HTML" title="What is HTMl"> HTML</a></li>
-    <li><a href="css.HTML" title="this is css"> CSS</a></li>
+    <li><a href="html.html" title="What is HTMl"> HTML</a></li>
+    <li><a href="css.html" title="this is css"> CSS</a></li>
   <li> Java Script</li>
   </ol>
   <h2>css</h2>
