--- a/index.html
+++ b/index.html
@@ -2,23 +2,41 @@
 <html>
 
 <head>
-<title> Web</title>
+<title> Web </title>
 <meta charset="utf-8">
+<link rel="stylesheet"href="style.css">
 </head>
 <body>
-<h1>
-  <a href="index.html" title="This is Main">Web</a>
-</h1>
-<ol>
-<li><a href="html.html" title="What is HTMl"> HTML</a></li>
-<li><a href="css.html" title="this is css"> CSS</a></li>
-<li> Java Script</li>
-</ol>
+    <h1>
+      <a href="index.HTML" title="This is Main">Web</a>
+    </h1>
+    <input type="button" value="Night mode" id= "mode_button" onclick = "
+      if(document.querySelector('#mode_button').value ==='Night mode') {
+      document.querySelector('body').style.backgroundColor = 'black'
+      document.querySelector('body').style.color = 'white'
+      document.querySelector('h1').style.backgroundColor = 'pink'
+      document.querySelector('ol').style.backgroundColor = 'pink'
+      document.querySelector('#mode_button').value = 'Light mode'
+    } else {
+      document.querySelector('body').style.backgroundColor = 'white'
+      document.querySelector('body').style.color = 'black'
+      document.querySelector('h1').style.backgroundColor = 'lightgreen'
+      document.querySelector('ol').style.backgroundColor = 'lightgreen'
+      document.querySelector('#mode_button').value = 'Night mode'
+    }
+    ">
+<div id=grid>
+    <ol>
+      <a href="html.HTML" title="What is HTMl"><li> HTML</li></a>
+      <a href="css.HTML" title="this is css"><li> CSS</li></a>
+      <a href="Java Script.html" title="JAVA"><li>Java Script</li></a>
+    </ol>
 
+<div id="article">
 <h2>Web</h2>
-<h6>Welcome to Web<h6>
-
+Welcome to Web
 <p>This is Web</p>
-
+</div>
+</div>
 </body>
 </html>
