change some bugs

--- a/Web/Java script.html
+++ b/Web/Java script.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet"href="style.css">
   </head>
 <body>
-<h1> <a href="index.html" title="This is main">Web</a></h1>
+<h1> <a href="https://highandlight.github.io/WebCoding/Web/index.html" title="This is main">Web</a></h1>
 <input type="button" value="Night mode" id= "mode_button" onclick = "
   if(document.querySelector('#mode_button').value ==='Night mode') {
   document.querySelector('body').style.backgroundColor = 'black'
@@ -24,9 +24,9 @@
 ">
 <div id="grid">
 <ol>
-  <a href="html.html" title="HTML"><li>HTML</li></a>
-  <a href="css.html" title="CSS"><li>CSS</li></a>
-  <a href="Java Script.html" title="JAVA"><li>Java Script</li></a>
+  <a href="https://highandlight.github.io/WebCoding/Web/html.html" title="What is HTMl"><li> HTML</li></a>
+  <a href="https://highandlight.github.io/WebCoding/Web/CSS.html" title="this is css"><li> CSS</li></a>
+  <a href="https://highandlight.github.io/WebCoding/Web/Java%20script.html" title="JAVA"><li>Java Script</li></a>
   </ol>
 <div id="article">
 
