--- a/Web/css.html
+++ b/Web/css.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>
-    <a href="index.HTML" title="This is Main">Web</a>
+    <a href="https://highandlight.github.io/WebCoding/Web/index.html" title="This is Main">Web</a>
   </h1>
   <input type="button" value="Night mode" id= "mode_button" onclick = "
     if(document.querySelector('#mode_button').value ==='Night mode') {
@@ -28,9 +28,9 @@
 
   <div id="grid">
   <ol>
-    <a href="html.HTML" title="What is HTMl"><li> HTML</li></a>
-    <a href="css.HTML" title="this is css"><li> CSS</li></a>
-    <a href="Java Script.html" title="JAVA"><li>Java Script</li></a>
+    <a href="https://highandlight.github.io/WebCoding/Web/html.html" title="What is HTMl"><li> HTML</li></a>
+    <a href="https://highandlight.github.io/WebCoding/Web/CSS.html" title="this is css"><li> CSS</li></a>
+    <a href="https://highandlight.github.io/WebCoding/Web/Java%20script.html" title="JAVA"><li>Java Script</li></a>
   </ol>
  <div id="article">
 
