change some anchor tags

--- a/Web/css.html
+++ b/Web/css.html
@@ -29,7 +29,7 @@
   <div id="grid">
   <ol>
     <a href="https://highandlight.github.io/WebCoding/Web/html.html" title="What is HTMl"><li> HTML</li></a>
-    <a href="https://highandlight.github.io/WebCoding/Web/CSS.html" title="this is css"><li> CSS</li></a>
+    <a href="https://highandlight.github.io/WebCoding/Web/css.html" title="this is css"><li> CSS</li></a>
     <a href="https://highandlight.github.io/WebCoding/Web/Java%20script.html" title="JAVA"><li>Java Script</li></a>
   </ol>
  <div id="article">
